--- a/src/components/SubContent/sub.css
+++ b/src/components/SubContent/sub.css
@@ -1,9 +1,9 @@
-.container{
+.container-two{
     background: #FFFFFF;
    box-shadow: 0px 4px 12px rgba(90, 41, 5, 0.12);
    border-radius: 16px;
-   height:225px;
-   width:400px;
+   height:400px;
+   width:340px;
    margin-left: 50px;
    margin-top: 20px;
   
@@ -61,15 +61,21 @@ color: #969EAD;
 
 .delete{
     background: #FFFFFF;
+    width: 80px;
+    height: 60px;
 /* Color / Greyscale / 3 */
 
 border: 1px solid #7B7B7B;
 border-radius: 12px;
-height: 48px;
-width: 120px;
+/* height: 60px;
+width: 80px; */
 left: 0px;
 top: 0px;
 
+}
+.two{
+    height: 60px;
+    width: 80px;  
 }
 .edit{
     background: #FFFFFF;
@@ -77,8 +83,8 @@ top: 0px;
 
 border: 2px solid #F89E53;
 border-radius: 12px;
-height: 48px;
-width: 120px;
+/* height: 60px;
+width: 80px; */
 left: 0px;
 top: 0px;
 
@@ -89,13 +95,116 @@ top: 0px;
 
 border: 2px solid #F89E53;
 border-radius: 12px;
-height: 48px;
-width: 120px;
+/* height: 48px;
+width: 120px; */
 left: 0px;
 top: 0px;   
 }
-.crud{
+.crud-two{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin-top: 20px;
 }
+.edit-sub-category-bold{
+    width: 213px;
+    height: 34px;
+    
+    /* Nunito/24/Bold */
+    
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 140%;
+    /* identical to box height, or 34px */
+    
+    
+    /* Color / Greyscale / 1 */
+    color: #1E1E1E;
+}
+.edit-sub-category{
+    width: 46px;
+    height: 24px;
+    
+    
+    /* Nunito/17/SemiBold */
+    
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    /* identical to box height, or 24px */
+    
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+    
+    /* Color / Greyscale / 2 */
+    
+    color: #4D4D4D;
+}
+.button-white{
+    box-sizing: border-box !important;
+
+
+
+/* White */
+
+background: #FFFFFF !important;
+/* Primary 1 */
+
+border: 1px solid #F89E53 !important;
+border-radius: 12px !important;
+font-family: 'Nunito';
+font-style: normal;
+font-weight: 600;
+font-size: 17px;
+line-height: 140%;
+/* identical to box height, or 24px */
+
+
+
+/* Primary 1 */
+
+color: #F89E53;
+}
+.button-orange{
+    box-sizing: border-box !important;
+
+    background: #F89E53 !important;
+    border-radius: 12px !important;
+
+    /* White */
+    
+   
+    /* Primary 1 */
+    
+    border: 1px solid #F89E53 !important;
+    color: white !important;
+    border-radius: 12px !important;
+    font-family: 'Nunito' !important;
+    font-style: normal !important;
+    font-weight: 600 !important;
+    font-size: 17px !important;
+    line-height: 140% !important;
+
+}
+.search-two{
+    margin-right: 200px !important;
+    position: absolute;
+    right: 7%;
+   }
+
+.square{
+    /* position: absolute; */
+width: 308px;
+height: 202px;
+margin-left: 15px;
+margin-top: 10px;
+/* left: 16px;
+top: 16px; */
+
+/* background: url(flower-3140492_1920.jpg); */
+border-radius: 8px;
+}
+
